--- a/HAMS/app/src/main/res/layout/item_appointment.xml
+++ b/HAMS/app/src/main/res/layout/item_appointment.xml
@@ -17,8 +17,14 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
         <TextView
-            android:id="@+id/date"
-            android:text="@string/date"
+            android:id="@+id/start"
+            android:text="Start"
+            android:textStyle="bold"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+        <TextView
+            android:id="@+id/end"
+            android:text="End"
             android:textStyle="bold"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
